--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,16 @@
   </head>
 
   <body>
+    
+    <% if current_user.nil?%>
+      <%= link_to 'Log In', login_path %>
+    <%else%>
+      <%= link_to "Log Out", logout_path %>
+    <%end%>
+
+
+
+    
     <%= yield %>
   </body>
 </html>
