--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     
     <% if current_user.nil?%>
       <%= link_to 'Log In', login_path %>
+      <%= link_to 'Sign Up', new_user_path%>
     <%else%>
       <%= link_to "Log Out", logout_path %>
     <%end%>
