--- a/app/views/users/_edit.html.erb
+++ b/app/views/users/_edit.html.erb
@@ -1,3 +1,5 @@
+
+<%= form_for @user do |form| %>
 <div class = 'container'>
 
 <div class="form-group">
@@ -16,6 +18,27 @@
 </div>
 
 <div class="form-group">
+    <%= form.label :website %>
+    <%= form.text_field :website, class: "form-control" %>
+<div>
+
+<div class="form-group">
+  <%= form.label :bio %>
+  <%= form.text_field :bio, class: "form-control" %>
+</div>
+
+<div class="form-group">
+  <%= form.label :phone_number %>
+  <%= form.number_field :phone_num, class: "form-control" %>
+</div>
+
+<div class="form-group">
+   <%= select_tag 'user[gender]', options_for_select([["Not Specified", :not_specified], ["Male", :male],["Female", :female]]) %>
+<div>
+
+
+
+<div class="form-group">
   <%= form.label :password %>
   <%= form.password_field :password, class: "form-control" %>
 </div>  
@@ -23,3 +46,4 @@
 <div class="submit-field">
   <%= form.submit "Submit", class: "btn btn-default"%>
 </div>
+<%end%>
