--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    
+    <%= link_to "Homepage", root_path %>
     <% if current_user.nil?%>
       <%= link_to 'Log In', login_path %>
       <%= link_to 'Sign Up', new_user_path%>
