--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,13 @@
 welcome to instagram clone
 
-<%=link_to "Upload New Image", new_user_post_path(current_user) %>
-<% if current_user.nil?%>
+<%=link_to "Upload New Image", new_post_path(current_user) %>
+<% if current_user %>
+    <% @posts.each do |post|%><br>
+    <%= image_tag post.images[0].url if post.images[0]%><br>
+    <%= post.caption %>
+    <%end%>
+<% else %>
     <%= form_for @user do |form| %>
     <%= render partial: '/users/form', object: form %>
     <%end%>
-<% else %>
-    <h4> pictures here </h4>
 <%end%>
