can edit post caption

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -6,3 +6,5 @@
 <%= post.text_field :caption, placeholder: "Enter caption", id: "post-caption" %>
 <%= post.submit "Post Image", class: "new-post-submit-button" %>
 <% end %>
+
+do view for edit
