--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   <body>
     <%= link_to "Homepage", root_path %>
     <% if current_user.nil?%>
+      <%= link_to "Sign in with Facebook", "/auth/facebook" %>
       <%= link_to 'Log In', login_path %>
       <%= link_to 'Sign Up', new_user_path%>
     <%else%>
