--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,4 +7,7 @@
 Like
 <%end%>
 <%= @post.caption %>
-<%= @post.comments%>
+<% @post.comments.each do |comment| %>
+<%= comment.user.fullname %>
+<%= comment.comments %>
+<%end%>
