--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,6 +2,37 @@ welcome to instagram clone
 <div class = "col-sm-4"></div>
 <div class = "col-sm-4">
 <%=link_to "Upload New Image", new_post_path(current_user) %>
+
+<form class="form-inline">
+<%= form_for_filterrific @filterrific do |f| %>
+  <div>
+    <%# give the search field the 'filterrific-periodically-observed' class for live updates %>
+    <%= f.text_field(:search_query, class: 'filterrific-periodically-observed form-control mb-2 mr-sm-2 mb-sm-0', placeholder: 'Search'
+    ) %>
+  </div>
+  <div>
+    <%= f.select(:sorted_by, @filterrific.select_options[:sorted_by], class: 'form-control mb-2 mr-sm-2 mb-sm-0') %>
+  </div>
+  <div>
+    <%= link_to(
+      'Reset filters',
+      reset_filterrific_url, class: 'form-control mb-2 mr-sm-2 mb-sm-0'
+    ) %>
+  </div>
+  <%# add an automated spinner to your form when the list is refreshed %>
+  <%= render_filterrific_spinner %>
+<% end %>
+</form>
+
+<br>
+<div class="row">
+  <div class="col-md-1">
+  </div>
+  <div class="col-md-2">
+    <%= render(partial: 'users/list', locals: { users: @users }) %>
+  </div>
+</div>
+
 <% if current_user %>
     <% @posts.each do |post|%><br>
     <%= time_ago_in_words(post.time) unless post.time.blank?%><br>
@@ -11,7 +42,7 @@ welcome to instagram clone
     Like
     <%end%>
     <%= post.caption %>
-    <%= post.comments.each do |comment|%>
+    <% post.comments.each do |comment|%>
     <%= comment.user.fullname%>
     <%= comment.comments%>
     <%end%>
