--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,12 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "payment";
+
+.profile-link {
+    float: right;
+    margin-right: 20px;
+}
+
+.homepage-link {
+    margin-left :20px;
+}
