--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,20 +9,27 @@
   </head>
 
   <body>
-    <%= link_to "Homepage", root_path %>
+    
+
+    <%= link_to "Homepage", root_path, class: "homepage-link btn btn-default" %>
     <% if current_user.nil?%>
       <%= link_to "Sign in with Facebook", "/auth/facebook" %>
       <%= link_to 'Log In', login_path %>
       <%= link_to 'Sign Up', new_user_path%>
     <%else%>
-      <%= link_to "Log Out", logout_path %>
+      <%= link_to "Log Out", logout_path, class: "logout-link btn btn-default" %>
+      <%= link_to "Profile", user_path(current_user), class: "profile-link btn btn-default"%>
     <%end%>
 
-
-    <% flash.each do |key, value| -%>
-      <div id="flash_<%= key %>"><%=h value %></div>
-    <% end %>
-    
+    <div class="wrapper">
+        <% flash.each do |key, value| -%>
+        <div class="alert alert-<%=key%> alert-dismissable">
+          <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+          <%=h value %>
+        </div>
+        <% end %>
+</div>
+   
     <%= yield %>
   </body>
 </html>
