--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,12 @@
 welcome to instagram clone
 <div class = "col-sm-4"></div>
 <div class = "col-sm-4">
-<%=link_to "Upload New Image", new_post_path(current_user) %>
 
+<% if current_user.nil? %>
+    <%= form_for @user do |form|%>
+    <%= render partial: 'users/form', object: form %>
+    <%end%>
+    <%else%>
 <form class="form-inline">
 <%= form_for_filterrific @filterrific do |f| %>
   <div>
@@ -26,36 +30,10 @@ welcome to instagram clone
 
 <br>
 <div class="row">
-  <div class="col-md-1">
-  </div>
-  <div class="col-md-2">
+ 
     <%= render(partial: 'users/list', locals: { users: @users }) %>
   </div>
 </div>
 
-<% if current_user %>
-    <% @posts.each do |post|%><br>
-    <%= time_ago_in_words(post.time) unless post.time.blank?%><br>
-    <%= image_tag post.images[0].url if post.images[0]%><br>
-    <span class="likes_count"> <%= post.likes.count %> </span> <span class="likes-word"><%= 'like'.pluralize(post.likes.count) %></span>
-    <%= link_to post_likes_path(post), class: 'likes-link' do %><br>
-    Like
-    <%end%>
-    <%= post.caption %>
-    <% post.comments.each do |comment|%>
-    <%= comment.user.fullname%>
-    <%= comment.comments%>
-    <%end%>
-    
-    <%= form_for [post, @comment] do |form| %>
-    <%= form.text_area :comments, placeholder: "Add a comment...", id: 'new-comment-text' %>
-    <%= form.submit "Submit", class: 'submit-comment-button' %>
-    <%end%>
-    <%end%>
-<% else %>
-    <%= form_for @user do |form| %>
-    <%= render partial: '/users/form', object: form %>
-    <%end%>
 <%end%>
-</div>
-<div class = "col-sm-4">
+<div class = "col-sm-4"></div>
