fixed image uploading to cloud

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,12 +1,5 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "payment";
-
-.profile-link {
-    float: right;
-    margin-right: 20px;
-}
-
-.homepage-link {
-    margin-left :20px;
-}
+@import "posts";
+@import "users";
