--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,17 +9,59 @@
   </head>
 
   <body>
-    
 
-    <%= link_to "Homepage", root_path, class: "homepage-link btn btn-default" %>
-    <% if current_user.nil?%>
-      <%= link_to "Sign in with Facebook", "/auth/facebook" %>
-      <%= link_to 'Log In', login_path %>
-      <%= link_to 'Sign Up', new_user_path%>
-    <%else%>
-      <%= link_to "Log Out", logout_path, class: "logout-link btn btn-default" %>
-      <%= link_to "Profile", user_path(current_user), class: "profile-link btn btn-default"%>
-    <%end%>
+    <nav class="navbar">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">Kilogram</a>
+        <form class="navbar-form navbar-left">
+      </form>
+      </div>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        
+
+          <ul class="nav navbar-nav navbar-right">
+          
+            <% if current_user %>
+              <li><%= link_to "Log Out", logout_path%></li>
+            <li class="dropdown">
+            
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.fullname %><b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><%= image_tag current_user.avatar%></li>
+                <li><%= link_to "Profile", user_path(current_user.id) %></li>
+              	<li><%= link_to "Edit Profile", edit_user_path(current_user.id)%></li>
+								<li><%= link_to "Search for Users", users_path%></li>
+              </ul>
+            </li>
+						<% else %>
+						<li><%= link_to "Register", new_user_path %></li>
+            <li><%= link_to "Sign in with Facebook", "/auth/facebook" %></li>
+						<li><%= link_to "Login", login_path %></li>
+						<% end %>
+          </ul>
+
+
+
+          
+          
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
+
+
+  </div>
 
     <div class="wrapper">
         <% flash.each do |key, value| -%>
@@ -28,7 +70,9 @@
           <%=h value %>
         </div>
         <% end %>
-</div>
+    
+
+    
    
     <%= yield %>
   </body>
