--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
 <br>
 <div class = "container text-center">
-<%= link_to "Buy Image", payment_new_path %>&nbsp; $<%=@post.price%><br>
+$<%=@post.price%><br>
 <%= time_ago_in_words(@post.time) unless @post.time.blank?%><br>
 <%= image_tag @post.images[0].display.url %><br>
 <span class="likes_count"> <%= @post.likes.count %> </span> <span class="likes-word"><%= 'like'.pluralize(@post.likes.count) %></span>
@@ -12,5 +12,8 @@ Like<br>
 <b><%= comment.user.fullname %></b>
 <%= comment.comments %><br>
 <%end%>
-
 <%= link_to "Edit caption", edit_post_path, class: "btn btn-default" %>
+<hr>
+<% if current_user.id != @post.user_id%>
+<%= render 'buyings/form'%>
+<%end%>
