--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,5 @@
+<div class = "text-center well">
 <%= form_for @user do |form|%>
 <%= render partial: '/users/form', object: form %>
 <%end%>
+</div>
