--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,8 @@
 </div>
 <div class= "text-center ">
 <% @user_post.each do |post|%>
-<%= image_tag post.images[0].display.url if post.images[0]%><br>
+<%= link_to image_tag (post.images[0].display.url if post.images[0])%><br>
+<%= link_to "Go to post", post_path(post.id)%>
 <hr>
 <%end%>
 </div>
